--- a/index.html
+++ b/index.html
@@ -33,8 +33,19 @@
           </td>
         </tr>
         <!-- Iteration 2: Add more products here -->
+        <tr>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td class="font-weight-bold">Total</td>
+          <td><span id="total-value">$0.00</span></td>
+          <td></td>
+        </tr>
+        
       </tbody>
       <tfoot>
+        
         <!-- <tr class="create-product">
           <td>
             <input type="text" placeholder="Product Name" />
